--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -429,7 +429,7 @@ integrations:
         scopes: public_repo
         description: |
           Fetches GitHub issues from our showcase repository.
-        endpoint: /github/demo-issues
+        endpoint: GET /github/demo-issues
     actions:
       github-write-file:
         scopes: repo
@@ -448,6 +448,7 @@ integrations:
           List github repos from an organization.
       github-issues-demo-action:
         endpoint: POST /github/demo-write-issue
+        input: GithubWriteIssueInput
         description: |
           Create a GitHub issue in Nango's showcase repository.
     models:
@@ -508,6 +509,8 @@ integrations:
         id: integer
         title: string
         url: string
+      GithubWriteIssueDemoInput:
+        title: string
   google-calendar:
     syncs:
       google-calendar-events:
