--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -80,7 +80,7 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   cache: 'npm'
-                  node-version-file: '.nvmrc'
+                  node-version: '20.12.2'
                   registry-url: 'https://npm.pkg.github.com'
                   scope: '@nangohq'
                   always-auth: true
