--- a/scripts/one-off/records-migration/package.json
+++ b/scripts/one-off/records-migration/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc -b tsconfig.json .",
-        "migrate": "npm run build && node ./dist/migrate.js"
+        "migrate": "npm run build && node ./dist/migrate.js",
+        "verify": "npm run build && node ./dist/verify.js"
     },
     "author": "",
     "dependencies": {
