--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,6 +17,7 @@
     },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "scripts": {
+        "build": "npm run copytypes",
         "copyfiles": "copyfiles -u 1 lib/templates/* dist",
         "copytypes": "cp `node -p \"require.resolve('@nangohq/shared/dist/sdk/sync.d.ts')\"` './dist/nango-sync.d.ts'",
         "prepublishOnly": "npm run copyfiles && npm run copytypes"
