--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1941,6 +1941,26 @@ spotify:
     proxy:
         base_url: https://api.spotify.com
     docs: https://docs.nango.dev/integrations/all/spotify
+squarespace:
+    categories:
+        - dev-tools
+        - design
+    auth_mode: OAUTH2
+    authorization_url: https://login.squarespace.com/api/1/login/oauth/provider/authorize
+    token_url: https://login.squarespace.com/api/1/login/oauth/provider/tokens
+    token_request_auth_method: basic
+    scope_separator: ','
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://api.squarespace.com
+        headers:
+            User-Agent: ${connectionConfig.customappDescription}
+    docs: https://docs.nango.dev/integrations/all/squarespace
 squareup:
     categories:
         - payment
