--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1851,6 +1851,18 @@ listmonk:
         verification:
             method: GET
             endpoint: /lists
+make:
+    categories:
+        - productivity
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://${connectionConfig.environmentUrl}/api/v2
+        headers:
+            Authorization: Token ${apiKey}
+        verification:
+            method: GET
+            endpoint: /users/me
+    docs: https://docs.nango.dev/integrations/all/make
 mailgun:
     categories:
         - marketing
