--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -48,6 +48,7 @@
         "@radix-ui/react-toast": "1.2.1",
         "@radix-ui/react-tooltip": "1.1.2",
         "@sentry/react": "8.27.0",
+        "@tabler/icons-react": "3.14.0",
         "@tailwindcss/forms": "0.5.8",
         "@tanstack/react-table": "8.20.5",
         "@types/lodash": "4.17.7",
