--- a/integration-templates/calendly/nango.yaml
+++ b/integration-templates/calendly/nango.yaml
@@ -108,7 +108,7 @@ models:
         position: number
     QuestionAndAnswer:
         answer: string
-        position: string
+        position: number
         question: string
     Tracking:
         utm_campaign: string | null
@@ -147,6 +147,7 @@ models:
         tracking: Tracking
         updated_at: string
         uri: string
+        cancellation?: EventCancellation
         routing_form_submission: string | null
         payment: Payment | null
         no_show: string | null
