--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -56,12 +56,14 @@
         "@types/react": "18.3.4",
         "@types/react-dom": "18.3.0",
         "@types/react-helmet": "6.1.11",
+        "@types/stringify-object": "4.0.5",
         "class-variance-authority": "0.7.0",
         "classnames": "2.5.1",
         "clsx": "2.1.1",
         "cmdk": "1.0.0",
         "date-fns": "3.6.0",
         "env-cmd": "10.1.0",
+        "httpsnippet-lite": "3.0.5",
         "lodash": "4.17.21",
         "postcss": "8.4.41",
         "postcss-loader": "8.1.1",
@@ -75,6 +77,7 @@
         "react-toastify": "9.1.1",
         "react-use": "17.5.1",
         "recharts": "2.12.7",
+        "stringify-object": "5.0.0",
         "swr": "2.2.5",
         "tailwind-merge": "2.5.2",
         "tailwindcss": "3.4.10",
